Added video player, updated readme

--- a/README
+++ b/README
@@ -6,4 +6,4 @@ Author: Dirk Songuer
 Contact: dirk@songuer.de
 Link: https://github.com/DirkSonguer/InstagoBB10
 
-Tested with BlackBerry 10.1 on a Z10 and simulator 10.1.0.4828
+Tested with BlackBerry 10.2 on a Z10 and simulator 10.2.X.1791
