Added GPL v2 license

--- a/README
+++ b/README
@@ -6,4 +6,7 @@ Author: Dirk Songuer
 Contact: dirk@songuer.de
 Link: https://github.com/DirkSonguer/InstagoBB10
 
+License: GPL v2
+See: http://choosealicense.com/licenses/gpl-v2/
+
 Tested with BlackBerry 10.2 on a Z10 and simulator 10.2.X.1791
