Added icon license

--- a/README
+++ b/README
@@ -9,4 +9,8 @@ Link: https://github.com/DirkSonguer/InstagoBB10
 License: GPL v2
 See: http://choosealicense.com/licenses/gpl-v2/
 
+Icons: Subway by Pixle
+See: http://subway.pixle.pl/
+For commercial use, a paid license is needed
+
 Tested with BlackBerry 10.2 on a Z10 and simulator 10.2.X.1791
